@@ -4943,7 +4943,7 @@ Interest</em></td>
 <td>This is the amount of
 interest paid (or CHARGED if negative)
 every game month (about once a real day) on items left in a users
-account.</td>
+account.<br>The ability to hold items can be disabled by making this amount &gt; 0.5</td>
 </tr>
 <tr>
 <td><em>Loan
@@ -4951,7 +4951,7 @@ Interest</em></td>
 <td>This is the amount of
 interest charged every game month
 (about once a real day) on gold money loaned to players or clans
-account.</td>
+account.<br>The ability to make loans can be disabled by making this amount &lt; -0.5</td>
 </tr>
 <tr>
 <td><em>Bank
